2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* GettextProjectBinding.cs, MonoDevelop.Gettext/Translation.cs,
	  MonoDevelop.Gettext/TranslationProject.cs: Moved serialization
	  engine to MonoDevelop.Core. Use new syntax for specifying attribute
	  scope.

2008-06-26  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/TranslationProjectOptionsDialog.cs: fixed bug in
	  options dialog.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.addin.xml: Bump MD version.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.Editor/POEditorWidget.cs, gtk-gui/gui.stetic: Use
	  the OnDestroyed event instead of Dispose, since with the latest
	  changes in gtk#, Dispose is not called anymore when a widget is
	  destroyed.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext/TranslationProject.cs: Track api changes.

2008-05-30  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/GettextEditorDisplayBinding.cs,
	  MonoDevelop.Gettext.Editor/CatalogEditorView.cs: Fixed bug (gettext
	  addin didn't work).

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext/TranslationProject.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.NodeBuilders/TranslationNodeBuilder.cs,
	  MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs,
	  MonoDevelop.Gettext.mdp,
	  MonoDevelop.Gettext.Editor/POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs,
	  gtk-gui/gui.stetic, Makefile.am,
	  MonoDevelop.Gettext/MakefileHandler.cs,